# ovwt

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yml
api/: index.html
configuration/: index.html
docs/: api.md  configuration.md  index.md  usage.md
outputs/2026-04-10/17-07-08/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-04-10/17-09-59/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-04-10/17-11-07/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-04-10/17-15-08/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-04-10/17-16-18/.hydra/: config.yaml  hydra.yaml  overrides.yaml
search/: search_index.json
src/ovwt/: __init__.py
src/ovwt/conf/: config.yaml
tests/: test_ovwt.py
usage/: index.html
