[project]
name = "ovwt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "gwenneth.straub@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fire>=0.7.1",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "polars>=1.39.3",
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
]

[project.scripts]
ovwt = "ovwt:main"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "isort>=8.0.1",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.29.0",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
